Fix loading and search completed message alignment

--- a/src/app/journey/pre-journey/pre-journey.component.scss
+++ b/src/app/journey/pre-journey/pre-journey.component.scss
@@ -12,6 +12,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .scraped-artists-wrapper {
